# uprooted

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Install-Uprooted.ps1  LICENSE  README.md  Uninstall-Uprooted.ps1  install-uprooted-linux.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uninstall-uprooted-linux.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-installer.yml  build-linux.yml
docs/: ARCHITECTURE.md  AVALONIA_PATTERNS.md  BUILD.md  CLR_PROFILER.md  CONTRIBUTING_TECHNICAL.md  DOTNET_RUNTIME.md  HOOK_REFERENCE.md  HOW_IT_WORKS.md  INDEX.md  INSTALLATION.md  INSTALLER.md  ROADMAP.md  THEME_ENGINE_DEEP_DIVE.md  TYPESCRIPT_REFERENCE.md
docs/plugins/: ADVANCED_DEVELOPMENT.md  API_REFERENCE.md  BRIDGE_REFERENCE.md  CONTRIBUTING_PLUGINS.md  (+3 more)
hook/: AvaloniaReflection.cs  ColorPickerPopup.cs  ColorUtils.cs  ContentPages.cs  DotNetBrowserReflection.cs  Entry.cs  HtmlPatchVerifier.cs  Logger.cs  NativeEntry.cs  NsfwFilter.cs  PlatformPaths.cs  SidebarInjector.cs  StartupHook.cs  ThemeEngine.cs  UprootedHook.csproj  UprootedSettings.cs  VisualTreeWalker.cs
installer/: index.html  package.json  vite.config.ts
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/.cargo/: config.toml
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: detection.rs  embedded.rs  hook.rs  main.rs  patcher.rs  settings.rs  themes.rs
packaging/: PKGBUILD
scripts/: build.ts
tools/: uprooted_profiler.c  uprooted_profiler.def  uprooted_profiler_linux.c
(+20 files in other folders)
